# openGA

./: CMakeLists.txt  README.md  conanfile.py
doc/: roadmap.md
examples/: count-ones.cpp
examples/so-1/: example_so1.cpp
include/openga/: genetic-engine.hpp  genetic.hpp  multithreading.hpp  openga.hpp  stop-watch.hpp  util.hpp
test_package/: CMakeLists.txt  conanfile.py  example.cpp
